--- a/carta/index.html
+++ b/carta/index.html
@@ -20,7 +20,7 @@
           <div class="front-text">
           <h3 class="happy">HAPPY</h3>
           <h2 class="bday">BIRTHDAY</h2> 
-          <h3 class="toyou">ALE!</h3>  
+          <h3 class="toyou">TALI!</h3>  
           </div>
           <div class="wrap-deco">
         <div class="decorations"></div>
@@ -40,12 +40,12 @@
              <div class="inside-text">
           <h3 class="happy">HAPPY</h3>
           <h2 class="bday">BIRTHDAY</h2> 
-          <h3 class="toyou">ALE!</h3>  
+          <h3 class="toyou">TALIANA!</h3>  
           </div>
             <div class="wishes">
             <p>De Brainy ;).</p>
-            <p>Happy Birthday ALE ,feliz cumpleaños espero que lo pases increible en tu dia, Que este día esté lleno de risas, amor y momentos inolvidables. Eres una persona increíble y mereces todo lo bueno que la vida tiene para ofrecer. Sigue brillando con esa luz especial que te caracteriza Manita !🎂.</p>
-            <p class="sara">28  junio 25</p>
+            <p>Happy Birthday BF🥹 ,feliz cumpleaños espero que lo pases increible en tu dia, Que este día esté lleno de risas, amor y momentos inolvidables. Eres una persona increíble y mereces todo lo bueno que la vida tiene para ofrecer. Sigue brillando con esa luz especial que tienes Tablita !🎂.</p>
+            <p class="sara">23 julio 25</p>
             </div>
           </div>
         </div>
