--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>ALE ⁎⭑꙳⭒☪︎⭒꙳⁎⭑</title>
+    <title>Tali🫶⁎⭑꙳⭒☪︎⭒꙳⁎⭑</title>
 </head>
 <body onclick="PlayAudio()">
     <audio id="musica1" autoplay  >
@@ -16,15 +16,14 @@
    
     <div class="greetings">
 
+        <span>T</span>
         <span>A</span>
         <span>L</span>
-        <span>E</span>
-        <span>X</span>
+        <span>I</span>
         <span>A</span>
         <span>N</span>
-        <span>D</span>
-         <span>R</span>
-         <span>A</span>
+        <span>A</span>
+       
         
 
     </div>
@@ -37,7 +36,7 @@
         <span></span>
     </div>
     <div class="description">
-        <span>¡Manitaaaa, feliz cumpleaños! 🎉🎂❤️ pasala muy bien en este dia  </span>
+        <span>¡BF, feliz cumpleaños! 🎉🎂❤️ pasala muy bien en este dia  </span>
     </div>
     <div class="button">
         <button>
